--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Welcome to MariePerry.art</title>
+        <title>Welcome to Kelsey.studio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.html">
@@ -127,7 +127,7 @@
                             <div class="single_home_slider">
                                 <div class="home-overlay"></div>
                                 <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                    <h2>Marie Perry Art Studio</h2>
+                                    <h2>Kelsey Studio</h2>
                                     <div class="separator"></div>
                                     <p class="subtitle">Professionals <br />
                                         in the Creative Industries</p>
