--- a/index.html
+++ b/index.html
@@ -517,12 +517,12 @@
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="single_message_right_info whitetext">
                                             <ul>
-                                                <li><i class="fa fa-map-marker"></i> <span>Denver, CO    ✈   Worldwide
+                                                <li><i class="fa fa-map-marker"></i> <span>Denver, CO    
                                                     </span></li>
 
-                                                <li><i class="fa fa-mobile-phone"></i> <span>+1-720-320-5977</span></li>
+                                                <li><i class="fa fa-mobile-phone"></i> <span>+12626662755-</span></li>
 
-                                                <li><i class="fa fa-envelope-o"></i> <span>marieperry.art@mail.com</span></li>
+                                                <li><i class="fa fa-envelope-o"></i> <span>kelseyenea5@gmail.com</span></li>
                                             </ul>
 
                                             <div class="contact_socail transition">
