--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                                 </div><!-- End of col-sm-6 -->
                                                 <div class="col-sm-6 col-xs-6">
                                                     <div class="single_right_text text-left">
-                                                        <p class="sp-layer right_sp_layer" data-width="100%">Mary Perry was such a great company to work with! She was amazing and our pictures turned out gorgeous. I would definitely recommend her to be your photographer for any occasion! </p>
+                                                        <p class="sp-layer right_sp_layer" data-width="100%"> lots of sketches </p>
                                                     </div>
                                                 </div><!-- End of col-sm-6 -->
                                             </div>
