--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                                             <li><a href="aboutme.html">about me</a></li>
                                             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true">services</a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a href="photography.html">photography</a></li>
-                                                    <li><a href="video.html">video</a></li>
-                                                    <li><a href="design.html">design</a></li>
+                                                    <li><a href="photography.html">sketching</a></li>
+                                                    <li><a href="video.html">painting</a></li>
+                                                    <li><a href="design.html">wire wrapping</a></li>
                                                 </ul>
                                             </li>
                                             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true">gallaries</a>
@@ -182,8 +182,8 @@
                                             <h2>photography</h2>
                                             <div class="separator2"></div>
                                                 <p>
-                                                    I take a deep delight in what I do no matter how big or small. My work isn`t limited by a personal portrait or a family photo. I also do photoshoots for the major events such as weddings, corporate gatherings and fashion shows.
-                                                    My goal is to make you proud of who you are by capturing the best of moments of your life. 
+                                             I humbly started off sketching and then moved up to painting, as my love for art grew I started working with different metals and crytals, such as wire wrapping. 
+                                                    
 
                                                 </p>
 
